# gamification-impl/src/main/java/io/avalia/gamification/api/endpoints/ApplicationsApiController.java
@@ -1,6 +1,6 @@
 package io.avalia.gamification.api.endpoints;
 
-import io.avalia.gamification.api.ApplicationApi;
+import io.avalia.gamification.api.ApplicationsApi;
 import io.avalia.gamification.api.model.Application;
 import io.avalia.gamification.api.model.InlineObject;
 import io.avalia.gamification.entities.ApplicationEntity;
@@ -12,9 +12,11 @@ import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestBody;
 
 import javax.validation.Valid;
+import java.util.ArrayList;
+import java.util.List;
 
 @Controller
-public class ApplicationApiController implements ApplicationApi {
+public class ApplicationsApiController implements ApplicationsApi {
     @Autowired
     ApplicationRepository applicationRepository;
 
@@ -28,5 +30,21 @@ public class ApplicationApiController implements ApplicationApi {
         app.setName(appEntity.getName());
         app.setApiKey(appEntity.getApiKey());
         return ResponseEntity.ok(app);
+    }
+
+    public ResponseEntity<List<Application>> getApplications(String xApiKey) {
+        List<Application> applications = new ArrayList<>();
+
+        applications.add(toApplication(applicationRepository.findByApiKey(xApiKey)));
+
+        return ResponseEntity.ok(applications);
+    }
+
+
+    private Application toApplication(ApplicationEntity entity) {
+        Application application = new Application();
+        application.setApiKey(entity.getApiKey());
+        application.setName(entity.getName());
+        return application;
     }
 }
